feat: chg name and add screenshots

--- a/popup.html
+++ b/popup.html
@@ -4,8 +4,9 @@
   .wrapper {
     text-align: center;
   }
+
   .widget {
-    width: 150px;
+    width: 180px;
     padding: 15px 0;
   }
 
@@ -71,7 +72,7 @@
 </style>
 
 <head>
-  <title>Anchors Killer</title>
+  <title>Href Disabler</title>
   <script src="popup.js"></script>
 </head>
 
@@ -81,7 +82,7 @@
       <label class="toggle">
         <input type="checkbox" id="checkbox" class="toggle__real" name="commission">
         <span class="toggle__fake"></span>
-        <span class="toggle__title">Kill <b>&#60;a href&#62;</b></span>
+        <span class="toggle__title">Disable <b>&#60;a href&#62;</b></span>
       </label>
     </div>
     <div class="link__wrapper">
